# gnome-control-center-signon

./: AUTHORS  Makefile.am  NEWS  autogen.sh  configure.ac  online-accounts-preferences.in
data/: com.canonical.webcredentials.capture.service.in  credentials-preferences.desktop.in.in  unity-credentials-panel.desktop.in.in  update-accounts.desktop.in.in
debian/: changelog  control  libaccount-plugin-1.0-0.install  libaccount-plugin-1.0-0.symbols  libaccount-plugin-1.0-dev.install  rules  unity-control-center-signon.install
debian/patches/: 0001-vala-0-36.patch  series
doc/account-plugin/: Makefile.am  account-plugin-docs.xml  account-plugin-sections.txt
help/: Makefile.am
libaccount-plugin/: AccountPlugin.vapi  account-plugin.h  account-plugin.pc.in  application-plugin.c  application-plugin.h  client.c  client.h  module.h  oauth-plugin.c  oauth-plugin.h  plugin.c  plugin.h
po/: POTFILES.in  POTFILES.skip
src/: cc-credentials-account-applications-model.vala  cc-credentials-account-details-page.vala  cc-credentials-accounts-model.vala  cc-credentials-accounts-page.vala  cc-credentials-application.vala  cc-credentials-applications-model.vala  cc-credentials-authorization-page.vala  cc-credentials-login-capture.vala  cc-credentials-panel.c  cc-credentials-preferences.vala  cc-credentials-providers-model.vala  cc-credentials-providers-page.vala  cc-webcredentials-indicator.vala  config.vapi
tests/: test-account-applications-model.vala  test-account-details-page.vala  test-account-plugin.sh  test-account-plugin.vala  test-accounts-model.vala  test-accounts-page.vala  test-applications-model.vala  test-authorization-page.vala  test-preferences.vala  test-providers-model.vala  test-providers-page.vala
tests/autopilot/: setup.py
tests/autopilot/unity_control_center_signon/: test_control_center_signon.py
tests/data/: MyProvider.provider  MyService.service  MyService2.service  OtherService.service
tools/: update-accounts.c
